--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" >Save changes</button>
         </div>
       </div>
     </div>
@@ -108,7 +108,7 @@
 
     </div>
     <section>
-        <div class="row ">
+        <div class="row task__container ">
             <div class="col-md-6 col-ld-4">
                 <div class="card text-center">
                     <div class="card-header d-flex justify-content-end gap-2">
